--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "finished-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tarungunampalli.github.io/skyscanner",
+  "homepage": "https://tarungunampalli.github.io/Capital-One-SkyScanner-Web/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
